added segements for 1080 rep

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <body>
     <div>
       <div>
-        <video autoplay="" preload="none" controls="true">
+        <video autoplay="" preload="none" muted="true" controls="true">
             <source src="https://localhost:3000/myvideo.mpd" type="application/dash+xml">
         </video>
       </div>
