Implementing Client-Server Req-Res Setup
client-server req-res setup.

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <div>
       <div>
         <video autoplay="" preload="none" muted="true" controls="true">
-            <source src="https://localhost:3000/myvideo.mpd" type="application/dash+xml">
+            <source src="/myvideo.mpd" type="application/dash+xml">
         </video>
       </div>
     </div>
