--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <!-- <link rel="stylesheet" type="text/css" href="./style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dashjs/3.1.2/dash.all.min.js"></script>
       <style>
         video {
