--- a/client/index.html
+++ b/client/index.html
@@ -50,22 +50,22 @@
           player = dashjs.MediaPlayer().create();
           
           /* Extend RequestModifier class and implement our own behaviour */
-          // player.extend("RequestModifier", function () {
-          //     return {
-          //         modifyRequestHeader: function (xhr) {
-          //             /* Add custom header. Requires to set up Access-Control-Allow-Headers in your */
-          //             /* response header in the server side. Reference: https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/setRequestHeader */
-          //             /* xhr.setRequestHeader('DASH-CUSTOM-HEADER', 'MyValue'); */
-          //             return xhr;
-          //         },
-          //         modifyRequestURL: function (url) {
-          //             /* Modify url adding a custom query string parameter */
+          player.extend("RequestModifier", function () {
+              return {
+                  modifyRequestHeader: function (xhr) {
+                      /* Add custom header. Requires to set up Access-Control-Allow-Headers in your */
+                      /* response header in the server side. Reference: https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/setRequestHeader */
+                      /* xhr.setRequestHeader('DASH-CUSTOM-HEADER', 'MyValue'); */
+                      return xhr;
+                  },
+                  modifyRequestURL: function (url) {
+                      /* Modify url adding a custom query string parameter */
                       
 
-          //             return url + '?customQuery='+ value;
-          //         }
-          //     };
-          // });
+                      return url + '?customQuery='+ value;
+                  }
+              };
+          });
           player.initialize(video, url, true);
 
           player.updateSettings({
